# flettext

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/durian/: package-lock.json  package.json
apps/pineapple/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/pineapple/prisma/: schema.prisma  seed.ts
apps/pineapple/src/components/: box.tsx  button.tsx  checkbox.tsx  modal.tsx  popover.tsx
apps/pineapple/src/helpers/: useInterval.ts
apps/pineapple/src/pages/: 404.tsx  _app.tsx  _document.tsx  chat.tsx  index.tsx  login.tsx  logout.tsx  signup.tsx  verify.tsx
apps/pineapple/src/reducers/: settings.ts
apps/pineapple/src/util/: listener.ts
apps/pineapple/src/utils/: theme.ts
apps/pineapple_legacy/: package.json
apps/pineapple_legacy/prisma/: schema.prisma  seed.ts
apps/pineapple_legacy/src/components/: inputField.tsx
apps/pineapple_legacy/src/lib/: theme.ts
apps/pineapple_legacy/src/pages/: _app.tsx  index.tsx
apps/raspberry/: .gitignore  Cargo.toml  Dockerfile  build.rs  html.sh  package.json
apps/raspberry/migrations/: 20220519231157_1.down.sql  20220519231157_1.sql  20220519231157_1.up.sql
apps/raspberry/src/: html.rs  main.rs  server.rs  session.rs
apps/raspberry/src/controllers/: count.rs  default.rs  index.rs  login.rs  logout.rs  mod.rs  signup.rs  ws.rs
apps/raspberry/src/db/: login.rs  logout.rs  mod.rs  signup.rs  todo.rs
apps/raspberry/src/test/: index.rs
apps/raspberry/src/views/: 404.html  index.html
apps/raspberry/test/: index.html
(+52 files in other folders)
