[package]
name = "raspberry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raspberry-backend-app"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"
actix-http = "3.0.4"
env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = { version = "1", features=["derive"] }
serde_json = "1"
sqlx = { version = "0.5.13", features = [ "postgres", "chrono", "runtime-actix-native-tls", "uuid" ] }
actix-identity = "0.4.0"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }